# Space-Wars

./: CMakeLists.txt  README.md
assets/images/: dacdd669fcf36cb6306387fcaa0c8d67_w200-v1.xcf
include/: Background.hpp  BadGuy.hpp  Fireball.hpp  Game.hpp  Player.hpp
log/: logError.cpp
src/: Background.cpp  BadGuy.cpp  Fireball.cpp  Game.cpp  Player.cpp  main.cpp
